# Template-Generators

React-Tailwind-Template/: create.bat  create.py  pyproject.toml
VSCode-Theme-Template/: CHANGELOG.md  README.md  colors.js  config.js  dobj.js  generate.py  newcolor.js  obj.js  package-lock.json  package.json  pyproject.toml  runner.js  runner.py  test.js  theme.js  tsconfig.json  vsc-extension-quickstart.md
VSCode-Theme-Template/nulzo-autumn/: CHANGELOG.md  README.md  nulzo-autumn-0.0.1.vsix  nulzo-autumn-0.0.2.vsix  nulzo-autumn-0.0.3.vsix  package.json  vsc-extension-quickstart.md
VSCode-Theme-Template/nulzo-autumn/themes/: @nulzo [Autumn]-color-theme.json
VSCode-Theme-Template/nulzo-retro-light/: CHANGELOG.md  README.md  nulzo-retro-light-0.0.1.vsix  nulzo-retro-light-0.0.2.vsix  nulzo-retro-light-0.0.3.vsix  package.json  vsc-extension-quickstart.md
VSCode-Theme-Template/nulzo-retro-light/themes/: @nulzo [Retro Light]-color-theme.json
VSCode-Theme-Template/templates/themes/: dark.json
VSCode-Theme-Template/test/: README.md  package.json  vsc-extension-quickstart.md
VSCode-Theme-Template/themes/: lavender-theme.json  mista-theme.json  nolan-theme.json  nulzo-cum-theme.json  nulzo-dark-theme.json  nulzo-theme.json
