[tool.poetry]
name = "vscode-theme-template"
version = "0.1.0"
description = ""
authors = ["Nolan Gregory <65730528+nulzo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
